tests/pass/MultiplyAssign.java
package pass;

public class MultiplyAssign {

	public int multiplyAssign(int x, int y) {
		int t = x;
		t *= y;
		return t;
	}
}
