tests/fail/MultiplyAssign.java
package fail;

public class MultiplyAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t *= "a";
	}	
}
